--- a/Ecoflor2017_WorkShop_BasicPhylogenetics_2.rmd
+++ b/Ecoflor2017_WorkShop_BasicPhylogenetics_2.rmd
@@ -24,41 +24,51 @@ library(RCurl)
 source("read.GenBank2.R")
 sylvia.seq <- read.GenBank2(x)
 sylvia.seq
-
-
+names(sylvia.seq)
+attributes(sylvia.seq)
+attr(sylvia.seq, "names")
+attr(sylvia.seq, "species")
+attr(sylvia.seq, "description")
+attr(sylvia.seq, "class")
 ```
 
 2. Alignment of sequences
 ```{r}
 sylvia.clus <- clustal(sylvia.seq)
+#clustal is an older method
+sylvia.clus
+
 library(phyloch)
 sylvia.muscle <- muscle(sylvia.seq)
-identical(sylvia.clus[x, ], sylvia.muscle[x, ])
+#muscle is a more updated method
+sylvia.muscle
 
+identical(sylvia.clus[x, ], sylvia.muscle[x, ])
+#this compare both alignments
 ```
 
 3. Edit sequence data, load ecological data and save data
 ```{r}
 taxa.sylvia <- attr(sylvia.seq, "species")
+taxa.sylvia
+# We have creaed an object with the scientific names of the species of the downloaded sequences
 names(taxa.sylvia) <- names(sylvia.seq)
+#We use the GenBank accession number to match list of scientific names and their sequences
 taxa.sylvia[1] <- "Sylvia_atricapilla"
 taxa.sylvia[24] <- "Sylvia_abyssinica"
 taxa.sylvia[20] <- "Sylvia_melanocephala"
 taxa.sylvia[15] <- "Sylvia_conspicillata"
+# we have to update some scientific names
 
 sylvia.eco <- read.table("sylvia_data.txt")
+sylvia.eco
 str(sylvia.eco)
 rownames(sylvia.eco)
-sylvia.eco
 save(sylvia.muscle, taxa.sylvia, sylvia.eco,
      file = "sylvia.RData")
 ```
 
 
-
-###
-### Chapter 5
-###
 
 4. DNA models of evolution
 Visit this website http://svitsrv25.epfl.ch/R-doc/library/ape/html/dist.dna.html
@@ -86,35 +96,18 @@ abline(b = 1, a = 0) # draw x = y line
 plot(syl.K80, syl.JC69)
 abline(b = 1, a = 0)
 
-```
-
-4b. Exploring the three codon positions
-
-```{r}
-
-layout(matrix(1:3, 1))
-for (i in 1:3) {
-    s <- logical(3); s[i] <- TRUE
-    x <- sylvia.seq.ali[, s]
-    d <- dist.dna(x, p = TRUE)
-    ts <- dist.dna(x, "Ts", p = TRUE)
-    tv <- dist.dna(x, "Tv", p = TRUE)
-    plot(ts, d, xlab = "Number of Ts or Tv", col = "blue",
-         ylab = "K80 distance", xlim = range(c(ts, tv)),
-         main = paste("Position", i))
-    points(tv, d, col = "red")
-    }
-
-  layout(matrix(1:1, 1))
-par(mai=c(1.02,0.82,0.82,0.42))    
-    y <- numeric()
-for (i in 1:3) {
-    s <- logical(3); s[i] <- TRUE
-    y <- c(y, dist.dna(sylvia.seq.ali[, s], p = TRUE))
-}
-g <- gl(3, length(y) / 3)
-library(lattice)
-histogram(~ y | g, breaks = 20)
+library(phangorn)
+sylvia.seq.ali.phyDat <- as.phyDat(sylvia.seq.ali)
+sylvia.seq.ali.phyDat
+modelTest.results <- modelTest(sylvia.seq.ali.phyDat, tree=NULL, model = c("JC", "F81", "K80", "HKY", "SYM", "GTR"), G = TRUE, I = TRUE, FREQ = FALSE, k = 4, control = pml.control(epsilon = 1e-08,
+maxit = 10, trace = 1), multicore = FALSE, mc.cores = NULL)
+#JC one parameter
+#F81 one parameter for tranv. and trans. and equal base frequences
+#K80 two parameters, tranv. vs. trans.
+#HKY two parameters, tranv. vs. trans. and unequal base frequences
+#SYM six parameeters, and equal base frequences
+#GTR six parameters, equal base frequences
+modelTest.results
 
 ```
 
@@ -122,33 +115,39 @@ histogram(~ y | g, breaks = 20)
 5. Making NJ trees based on distance matrices
 ```{r}
 
+layout(matrix(1:1, 1))
 nj.sylvia.K80 <- nj(syl.K80)
 plot(nj.sylvia.K80)
 
-#nj.sylvia.K80$tip.label<-taxa.sylvia[nj.sylvia.K80$tip.label==names(taxa.sylvia)]
-#plot(nj.sylvia.K80)
+nj.sylvia.K80$tip.label<-taxa.sylvia[nj.sylvia.K80$tip.label==names(taxa.sylvia)]
+plot(nj.sylvia.K80)
+
+nj.sylvia.K80 <- root(nj.sylvia.K80, "Chamaea_fasciata")
+plot(nj.sylvia.K80)
 
 nj.sylvia.GG95 <- nj(syl.GG95)
+nj.sylvia.GG95$tip.label<-taxa.sylvia[nj.sylvia.GG95$tip.label==names(taxa.sylvia)]
+nj.sylvia.GG95 <- root(nj.sylvia.GG95, "Chamaea_fasciata")
 plot(nj.sylvia.GG95)
 
 dist.topo(nj.sylvia.K80, nj.sylvia.GG95)
 
 ```
 
-6. Bootstrap analyses
+6. Bootstrap analyses in a NJ tree
 
 ```{r}
 grep("Chamaea", taxa.sylvia, value = TRUE)
 f <- function(xx) root(nj(dist.dna(xx, p=TRUE)), "AJ534526")
 tr <- f(sylvia.muscle)
+tr
+plot(tr)
 ## same than: tr <- root(nj.sylvia.K80, "AJ534526")
 
 nj.boot.sylvia <- boot.phylo(tr, sylvia.muscle, f, 200,
                              rooted = TRUE)
 nj.boot.sylvia
-nj.boot.codon <- boot.phylo(tr, sylvia.muscle, f, 200, 3,
-                            rooted = TRUE)
-nj.boot.codon
+
 
 nj.est <- tr
 nj.est$tip.label <- taxa.sylvia[tr$tip.label]
@@ -160,8 +159,8 @@ write.tree(nj.est, "sylvia_nj_k80.tre")
 ```
 
 
-6. Maximum likelihood analyses
-
+7. Maximum likelihood analyses
+#HASTA AQUI
 ```{r}
 write.dna(sylvia.muscle, "sylvia.txt")
 phyml.sylvia <- phymltest("sylvia.txt", execname = "~/local/bin/PhyML-3.1/PhyML-3.1_linux64")
