ya vamos a por dataciones!

--- a/Ecoflor2017_WorkShop_BasicPhylogenetics_2.rmd
+++ b/Ecoflor2017_WorkShop_BasicPhylogenetics_2.rmd
@@ -174,11 +174,14 @@ write.tree(nj.est, "sylvia_nj_k80.tre")
 7. Maximum likelihood analyses
 
 ```{r}
+#ML wiht phyml
 write.dna(sylvia.muscle, "sylvia.txt")
 phyml.sylvia <- phymltest("sylvia.txt", execname = "~/local/bin/PhyML-3.1/PhyML-3.1_linux64")
 summary(phyml.sylvia)
 plot(phyml.sylvia, col = "black")
 TR <- read.tree("sylvia.txt_phyml_tree.txt")
+TR
+names(TR)
 mltr.sylvia <- TR[[28]]
 mltr.sylvia$tip.label <- taxa.sylvia[mltr.sylvia$tip.label]
 mltr.sylvia <- root(mltr.sylvia, "Chamaea_fasciata")
@@ -187,15 +190,116 @@ plot(mltr.sylvia, no.margin = TRUE)
 add.scale.bar(length = 0.01)
 
 phyml.sylvia.GTRIG <- phymltest("sylvia.txt", exclude = c("JC69", "K80", "F81", "F84", "HKY85", "TN93", "GTR", "JC69+I", "K80+I", "F81+I", "F84+I", "HKY85+I", "TN93+I", "GTR+I", "JC69+G", "K80+G", "F81+G", "F84+G", "HKY85+G", "TN93+G", "GTR+G", "JC69+I+G", "K80+I+G", "F81+I+G", "F84+I+G", "HKY85+I+G", "TN93+I+G"), execname = "~/local/bin/PhyML-3.1/PhyML-3.1_linux64")
+TRGTRIG <- read.tree("sylvia.txt_phyml_tree.txt")
 
+#ML with RAXML
+library(phyloch)
+raxml.sylvia.GTRCAT <- raxml(sylvia.seq.ali, path = "~/local/bin/RAxML-7.0.4/")
+#Must be this version of raxml. If you use other newer version, it won't work
+setwd("/home/amesclir/Documents/Ubuntufiles/GITHUB/Ecoflor2017_WorkShop_BasicPhylogenetics")
+
+raxml.sylvia.GTRCAT$tip.label <- taxa.sylvia[raxml.sylvia.GTRCAT$tip.label]
+raxml.sylvia.GTRCAT <- root(raxml.sylvia.GTRCAT, "Chamaea_fasciata")
+raxml.sylvia.GTRCAT <- drop.tip(raxml.sylvia.GTRCAT, "Chamaea_fasciata")
+plot(raxml.sylvia.GTRCAT, no.margin = TRUE)
+add.scale.bar(length = 0.01)
+write.tree(raxml.sylvia.GTRCAT, file = "raxml.sylvia.GTRCAT.tree")
+
+
+#ML with function implemented in phangorn
+library(phangorn)
+  dmJC <- dist.ml(sylvia.seq.ali.phyDat)
+  tree <- NJ(dmJC)
+  tree <- root(tree, "AJ534526")
+# Jukes-Cantor (starting tree from NJ)  
+  fitJC <- pml(tree, sylvia.seq.ali.phyDat)
+fitJC
+# optimize edge length parameter     
+  fitJC <- optim.pml(fitJC)
+  fitJC 
+## Not run:     
+# search for a better tree using NNI rearrangements     
+  fitJC <- optim.pml(fitJC, optNni=TRUE)
+  fitJC
+
+# JC + Gamma + I - model
+fitJC_GI <- update(fitJC, k=4, inv=.2)
+fitJC_GI
+# optimize shape parameter + proportion of invariant sites     
+fitJC_GI <- optim.pml(fitJC_GI, optGamma=TRUE, optInv=TRUE)
+fitJC_GI
+# GTR + Gamma + I - model
+  fitGTRGI <- optim.pml(fitJC_GI, rearrangement = "stochastic", 
+      optGamma=TRUE, optInv=TRUE, model="GTR") 
+
+fitGTRGI_def <- optim.pml(fitJC_GI, rearrangement = "NNI", 
+      optGamma=TRUE, optInv=TRUE, model="GTR") 
+
+fitGTRGI_def2 <- fitGTRGI_def
+fitGTRGI_def2$tree <- root(fitGTRGI_def2$tree, "AJ534526")
+fitGTRGI_def2$tree$tip.label <- taxa.sylvia[fitGTRGI_def2$tree$tip.label]
+  plot(fitGTRGI_def2$tree, cex = 0.8)
 
 ```
 
 8. Bootstrap analysis and maximum likelihood
 
+```{r}
+#Bootstrap in phyml not available for R
+
+#Bootstrap in raxml
+library(phyloch)
+raxml.sylvia.GTRCAT.boot <- raxml2(sylvia.seq.ali, runs = c(2, 5), outgroup = "AJ534526", path = "~/local/bin/RAxML-7.0.4/")
+setwd("/home/amesclir/Documents/Ubuntufiles/GITHUB/Ecoflor2017_WorkShop_BasicPhylogenetics")
+#There is a bug in this old version of raxml and the bootstrap analysis does not work, a least for this data set
+
+#In case it works in your data set, you can use lines like these to plot the tree
+#raxml.sylvia.GTRCAT.boot$tip.label <- taxa.sylvia[raxml.sylvia.GTRCAT.boot$tip.label]
+#raxml.sylvia.GTRCAT.boot <- root(raxml.sylvia.GTRCAT.boot, "Chamaea_fasciata")
+#raxml.sylvia.GTRCAT.boot <- drop.tip(raxml.sylvia.GTRCAT.boot, "Chamaea_fasciata")
+#plot(raxml.sylvia.GTRCAT.boot, no.margin = TRUE)
+#add.scale.bar(length = 0.01)
+#setwd("/home/amesclir/Documents/Ubuntufiles/GITHUB/Ecoflor2017_WorkShop_BasicPhylogenetics")
+
+#Bootstrap in function implemented in phangorn
+set.seed(123)
+
+bs <- bootstrap.pml(fitGTRGI_def, bs=100, optNni=TRUE)
+fitGTRGI_def$tree <- root(fitGTRGI_def$tree, "AJ534526")
+treeBS <- plotBS(fitGTRGI_def$tree,bs,type="phylogram")
+ml.boot.sylvia <- prop.clades(fitGTRGI_def$tree, bs, part = NULL, rooted = FALSE)
+
+mytree <- fitGTRGI_def$tree
+mytree$tip.label <- taxa.sylvia[mytree$tip.label]
+plot(mytree, no.margin = TRUE)
+nodelabels(round(ml.boot.sylvia / 100, 2), bg = "white")
+add.scale.bar(length = 0.01)
+write.tree(nj.est, "sylvia_ml_gtrig.tre")
+
+```
+
+9. Phylogenetic Bayesian analysis
+
+```{r}
+library(phyloch)
+
+setwd("/home/amesclir/local/bin/mrbayes-3.1.2")
+mrbayesresults <- mrbayes(sylvia.seq.ali, file = "sylvia_bayes.nex", nst = 6, rates = "invgamma", ngammacat = 4,     nruns = 2, ngen = 1e+05, printfreq = 100, samplefreq = 100,     nchains = 4, savebrlens = "yes", temp = 0.2, burnin = 10, contype = "allcompat", run = TRUE)
+
+sylvia.bayes.tree <- read.nexus("sylvia_bayes.nex.con")
+
+setwd("/home/amesclir/Documents/Ubuntufiles/GITHUB/Ecoflor2017_WorkShop_BasicPhylogenetics")
+write.tree(sylvia.bayes.tree, "sylvia_bayes.nex.con" )
+
+sylvia.bayes.tree[[1]] <- root(sylvia.bayes.tree[[1]], "AJ534526")
+sylvia.bayes.tree[[1]] <- drop.tip(sylvia.bayes.tree[[1]], "AJ534526")
+sylvia.bayes.tree[[1]]$tip.label <- taxa.sylvia[sylvia.bayes.tree[[1]]$tip.label]
+plot(sylvia.bayes.tree[[1]], no.margin = TRUE, show.node.label=T)
+
+```
 
 
-7. chronogram with the penalized likelihood method
+10. chronogram with the penalized likelihood method
 
 ```{r}
 
