--- a/Ecoflor2017_WorkShop_BasicPhylogenetics_DEF.rmd
+++ b/Ecoflor2017_WorkShop_BasicPhylogenetics_DEF.rmd
@@ -1,6 +1,7 @@
 ---
 title: "git@github.com:amesclir/Ecoflor2017_WorkShop_BasicPhylogenetics"
 author: "Marcial"
+email: amesclir@gmail.com
 date: "01/16/2017"
 output: html_document
 ---
