--- a/Ecoflor2017_WorkShop_BasicPhylogenetics_DEF.rmd
+++ b/Ecoflor2017_WorkShop_BasicPhylogenetics_DEF.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git@github.com:amesclir/Ecoflor2017_WorkShop_BasicPhylogenetics"
 author: "Marcial"
-email: amesclir@gmail.com
+email: amesclir@gmail.com 
 date: "01/16/2017"
 output: html_document
 ---
@@ -14,6 +14,8 @@ You can find interesting materials in this website.
 1. Let's download the GenBank sequences
 
 ```{r}
+
+#install.packages("ape")
 
 library(ape)
 
